# codus

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest-setup.ts
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
application/: package.json
application/src/: App.tsx
application/src-tauri/: Cargo.toml  tauri.conf.json
public/locales/en/: translation.json
src/: App.tsx  app.tsx  i18n.ts  main.tsx  router.tsx  tools.ts  tools.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrations.rs
src-tauri/src/encoding/: decode_jwt.rs  jwt.rs  mod.rs
src-tauri/src/generators/: generate_lipsum.rs  generate_uuid.rs  mod.rs
src-tauri/src/llm/: chat.rs  delete_model.rs  download_model.rs  list_available_models.rs  list_downloaded_models.rs  list_models.rs  mod.rs  model.rs
src-tauri/src/llm/chat/: create_chat.rs  send_message.rs
src-tauri/src/llm/commands/: model_manager.rs
src-tauri/src/llm/manage_models/: available_models.json  delete_model.rs  download_model.rs  list_models.rs  mod.rs  model.rs
src-tauri/src/text/: compare_text.rs  mod.rs
src/components/: ai-generator.tsx  copy-button.tsx  link.tsx  markdown.tsx  model-switcher.tsx  spotlight-search.tsx
src/components/__tests__/: ai-generator.test.tsx  link.test.tsx  markdown.test.tsx  model-switcher.test.tsx
src/hooks/: use-app-version.ts  use-chat.ts  use-model.ts
src/hooks/__tests__/: use-app-version.test.tsx  use-model.test.tsx
src/layout/: app-layout.module.css  app-layout.tsx
src/layout/__tests__/: app-layout.test.tsx
src/pages/: all-tools.module.css  all-tools.tsx
src/pages/__tests__/: all-tools.test.tsx
src/test/: mocks.ts  test-utils.tsx
src/tools/encoding/: jwt-decoder.tsx
src/tools/encoding/__tests__/: jwt-decoder.test.tsx
src/tools/generators/: lipsum-generator.tsx  uuid-generator.tsx
src/tools/generators/__tests__/: lipsum-generator.test.tsx  uuid-generator.test.tsx
src/tools/llm/: chat-history.tsx  chat.module.css  chat.tsx  manage-models.tsx  ollama-service-guard.tsx
src/tools/llm/__tests__/: chat.test.tsx  manage-models.test.tsx  ollama-service-guard.test.tsx
src/tools/text/: markdown-editor.tsx
src/tools/text/__tests__/: markdown-editor.test.tsx
