[package]
name = "codus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0.93"
hf-hub = "0.3.2"
llama_cpp = { version =  "0.3.2", features = ["metal"] }
jwt = "0.16.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12.1"
sha2 = "0.10.8"
tauri-plugin-clipboard-manager = "2.0.2"
reqwest = "0.12.8"
futures = "0.3.31"
tauri-plugin-store = "2"
tokio = "1.40.0"

[features]
metal = ["llama_cpp/metal"]
