[package]
name = "Codus"
version = "0.1.0"
description = "A privacy-first developer productivity tool with offline AI models and a suite of essential dev tools for everyday tasks."
authors = ["Jamie Livingstone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
similar = "2.7.0"
jwt = "0.16.0"
ollama-rs = { version = "0.2.2", features = ["stream"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.0"
tokio = "1.42.0"
tokio-stream = "0.1.16"
uuid = { version = "1.15.1", features = ["v1", "v4", "v7"] }

[dev-dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
tempfile = "3.15.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

