[package]
name = "codus"
version = "0.1.0"
description = "An offline-first desktop app for developers. Boost productivity with AI-powered tools, prioritising privacy and security. Built with Rust for Windows, macOS, and Linux."
authors = ["Jamie Livingstone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
